# proxy-address-mining

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VERSION  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
compose/: mpf-proxy.compose.yaml
configs/: mpf.example.yaml
docs/: ABUSE.md  AI_CODING_RULES.md  AI_PHASE_10_TASK.md  AI_PHASE_11_OPERATIONAL_COMPLETION_TASK.md  AI_PHASE_11_TASK.md  AI_PHASE_12_TASK.md  AI_PHASE_1_TASK.md  AI_PHASE_2_TASK.md  AI_PHASE_3_TASK.md  AI_PHASE_4_2_TASK.md  AI_PHASE_4_TASK.md  AI_PHASE_5_TASK.md  AI_PHASE_6_A1_CODEX_TASK.md  AI_PHASE_6_TASK.md  AI_PHASE_7_TASK.md  AI_PHASE_8_TASK.md  AI_PHASE_9_TASK.md  AI_RUNTIME_FIRST_PR_FLOW_RULE.md  AI_SAFE_RUNTIME_FIRST.md  ARCHITECTURE.md  BACKEND_PORT_POLICY.md  CONTROL_RULES.md  CUSTOMER_LIFECYCLE.md  DATA_MODEL.md  DEBUG_LOG.md  FIREWALL.md  FUTURE_EXTENSIONS.md  GUIDELINES.md  HISTORICAL_COMPATIBILITY_ANCHORS.md  INDEX.md  INTRANET_INSTALL.md  MIGRATION_POLICY.md  OBSERVABILITY_HASHRATE.md  OFFLINE_SYNC_RUNBOOK.md  PHASE_0.md  PHASE_1.md  PHASE_10_FARM5_0_1_130_SYNC_TEST_EVIDENCE.md  PHASE_10_FARM5_0_1_131_SYNC_TEST_EVIDENCE.md  PHASE_10_FARM5_0_1_132_SYNC_TEST_EVIDENCE.md  PHASE_10_FARM5_0_1_133_SYNC_TEST_EVIDENCE.md  (+129 more)
migrations/: env.py
mpf/: __init__.py  config.py  db.py  extension_models.py  future_models.py  models.py
scripts/: apply_phase4_1_config_planning.sh  bootstrap_phase1_ubuntu2404.sh  codex_pre_pr_check.sh  create_runtime_first_pr.sh  mpf_sync_main_zip_bootstrap.sh  phase11_controlled_artifact_reapply.sh  (+33 more)
(+570 files in other folders)
