[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "proxy-address-mining"
version = "0.1.108"
description = "Python-first control plane for a mining customer gateway"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "LicenseRef-Proprietary" }
authors = [
  { name = "MPF Project" }
]
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "PyYAML>=6.0,<7.0",
  "psycopg[binary]>=3.2,<4.0",
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[project.scripts]
mpf = "mpf.interfaces.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["mpf"]
